name:                spacecatslol
version:             0.0.1
synopsis:            Space Cats! Ha ha! Lol!
homepage:            https://github.com/wjlroe/spacecatslol
license:             MIT
author:              William Roe
maintainer:          git@wjlr.org.uk
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable spacecatslol
  main-is:             Main.hs
  build-depends:       base
                     , wai
                     , warp
                     , http-types
                     , scotty >=0.6.2
                     , text
                     , bytestring
                     , aeson
                     , blaze-html
                     , containers
                     , heroku
                     , random-extras
                     , random-source
                     , random-fu
                     , transformers
                     , unordered-containers
                     , attoparsec
