name:                spacecatslol
version:             0.0.2
synopsis:            Space Cats! Ha ha! Lol!
description:         Random cats from space
homepage:            https://github.com/wjlroe/HydroFerret
license:             MIT
license-file:        LICENSE
author:              William Roe
maintainer:          git@wjlr.org.uk
category:            Web
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type: git
  location: git://github.com/wjlroe/HydroFerret.git

executable spacecatslol
  main-is:             Main.hs
  build-depends:       base == 4.*
                     , wai
                     , warp
                     , http-types
                     , scotty >=0.6.2
                     , text
                     , bytestring
                     , aeson
                     , blaze-html
                     , containers
                     , random-source
                     , random-fu
                     , transformers
                     , unordered-containers
                     , attoparsec
                     , yaml ==0.8.23
